# ww_online

./: .gitignore  CMakeLists.txt  LICENSE  README.md  client.py  dme_bindings.cpp  dme_bindings.h  dolphin_access.cpp  dolphin_access.h  install.sh  main.cpp  notes.txt  protocol.json  ww_constants.json  ww_online.py  ww_ram_map.json
client/: client.py  ww_constants.json  ww_ram_map.json
client/windy/: inventory.py  player_status.py  ram.py
mock_client/: mock_client.py
server/: client_data.py  room.py  server.py
windy/: inventory.py  memory_access.py  player_status.py
